force-app/main/default/objects/Contact/fields/Account_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Country__c</fullName>
    <description>Account.BillingCountry</description>
    <formula>Account.BillingCountry</formula>
    <inlineHelpText>Account.BillingCountry</inlineHelpText>
    <label>Account Billing Country</label>
    <type>Text</type>
</CustomField>