force-app/main/default/objects/Contact/fields/Account_Billing_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Region__c</fullName>
    <description>Account.Billing_Region__c</description>
    <formula>TEXT(Account.Billing_Region__c )</formula>
    <inlineHelpText>Account.Billing_Region__c</inlineHelpText>
    <label>Account Billing Region</label>
    <type>Text</type>
</CustomField>