force-app/main/default/objects/Contact/fields/Account_NPN_Program_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_NPN_Program_Signed_Date__c</fullName>
    <description>Account.NPN_Program_Signed_Date__c</description>
    <formula>Account.NPN_Program_Signed_Date__c</formula>
    <inlineHelpText>Account.NPN_Program_Signed_Date__c</inlineHelpText>
    <label>Account NPN Program Signed Date</label>
    <type>Date</type>
</CustomField>