force-app/main/default/objects/Contact/fields/AccountId_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>AccountId_ReadOnly__c</fullName>
    <description>Used for Duplicate Rule as AccountId is not available in the matcher rule</description>
    <formula>AccountId</formula>
    <inlineHelpText>Used for Duplicate Rule as AccountId is not available in the matcher rule</inlineHelpText>
    <label>AccountId(ReadOnly)</label>
    <type>Text</type>
</CustomField>