force-app/main/default/objects/Contact/fields/AddEditTempContactID__c.field-meta.xml
<CustomField>
    <fullName>AddEditTempContactID__c</fullName>
    <label>AddEditTempContactID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>