force-app/main/default/objects/Contact/fields/Application_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Application_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For DLI Certified Instructor lead process (SDS-2586)</description>
    <label>Application Reviewer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Sales Profile - DLI, System Administrator, Data Administrator, Sales Profile - PAM Manager,, Sales Profile - Partner Admin, SVC SAP Integration</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>