force-app/main/default/objects/Contact/fields/B2B__c.field-meta.xml
<CustomField>
    <fullName>B2B__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketo Field for reporting</description>
    <label>B2B</label>
    <type>Checkbox</type>
</CustomField>