force-app/main/default/objects/Contact/fields/bounces__c.field-meta.xml
<CustomField>
    <fullName>bounces__c</fullName>
    <description>Marketo field for reporting</description>
    <label>bounces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>