force-app/main/default/objects/Contact/fields/CIP_Agreement_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>CIP_Agreement_Confirmation__c</fullName>
    <description>For DLI Certified Instructor lead process (SDS-2586)</description>
    <label>CIP Agreement Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DLI_Instructor_Lead_YN</valueSetName>
    </valueSet>
</CustomField>