force-app/main/default/objects/Contact/fields/Community_User_Active__c.field-meta.xml
<CustomField>
    <fullName>Community_User_Active__c</fullName>
    <formula>Community_User__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community User : Active</label>
    <type>Checkbox</type>
</CustomField>