force-app/main/default/objects/Contact/fields/Community_User_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_User_Profile_Name__c</fullName>
    <formula>Community_User__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community User : Profile Name</label>
    <type>Text</type>
</CustomField>