force-app/main/default/objects/Contact/fields/Community_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Community_User_Type__c</fullName>
    <formula>IF( !ISBLANK(Community_User__c) &amp;&amp;  Community_User__r.IsActive  = true &amp;&amp; CONTAINS(Community_User__r.Profile.Name, &quot;NPN Partner Community&quot;) &amp;&amp; (is_GRID_Contact__c = true ||  is_DGX_Contact__c  = true), &quot;NPN with ESP&quot;, 

IF( !ISBLANK(Community_User__c) &amp;&amp;  Community_User__r.IsActive  = true &amp;&amp; CONTAINS(Community_User__r.Profile.Name, &quot;NPN Partner Community&quot;) &amp;&amp; NOT(is_GRID_Contact__c = true ||  is_DGX_Contact__c  = true), &quot;NPN&quot;,

IF( !ISBLANK(Community_User__c) &amp;&amp;  Community_User__r.IsActive  = true &amp;&amp; CONTAINS(Community_User__r.Profile.Name, &quot;NVES Community User Non-Admin&quot;), &quot;ESP Non-Admin&quot;,

IF( !ISBLANK(Community_User__c) &amp;&amp;  Community_User__r.IsActive  = true &amp;&amp; CONTAINS(Community_User__r.Profile.Name, &quot;ESP Community User&quot;), &quot;ESP&quot;,

IF( !ISBLANK(Community_User__c) &amp;&amp; Community_User__r.IsActive = true &amp;&amp; CONTAINS(Community_User__r.Profile.Name, &quot;Community Lite Profile&quot;) &amp;&amp; (is_GRID_Contact__c = true ||  is_DGX_Contact__c  = true), &quot;Community with ESP&quot;, 

IF( !ISBLANK(Community_User__c) &amp;&amp; Community_User__r.IsActive = true, &quot;Others&quot;, 

IF( !ISBLANK(Community_User__c) &amp;&amp;  Community_User__r.IsActive  = false &amp;&amp; CONTAINS(Community_User__r.Profile.Name, &quot;NPN Partner Community&quot;) &amp;&amp; (is_GRID_Contact__c = true ||  is_DGX_Contact__c  = true), &quot;Inactive NPN with ESP&quot;, 

IF( !ISBLANK(Community_User__c) &amp;&amp; Community_User__r.IsActive = false &amp;&amp; CONTAINS(Community_User__r.Profile.Name, &quot;NPN Partner Community&quot;) &amp;&amp; NOT(is_GRID_Contact__c = true || is_DGX_Contact__c = true), &quot;Inactive NPN&quot;, 

IF( !ISBLANK(Community_User__c) &amp;&amp;  Community_User__r.IsActive  = false &amp;&amp; CONTAINS(Community_User__r.Profile.Name, &quot;ESP Community User&quot;), &quot;Inactive ESP&quot;, 

IF( !ISBLANK(Community_User__c) &amp;&amp; Community_User__r.IsActive = false &amp;&amp; CONTAINS(Community_User__r.Profile.Name, &quot;Community Lite Profile&quot;) &amp;&amp; (is_GRID_Contact__c = true ||  is_DGX_Contact__c  = true), &quot;Inactive Community with ESP&quot;, 

IF( !ISBLANK(Community_User__c) &amp;&amp; Community_User__r.IsActive = false, &quot;Inactive Others&quot;,  

&quot;&quot; 

)  

)   

)  

)  

)   

)  

) 

)

)

)

)</formula>
    <label>Community User Type</label>
    <type>Text</type>
</CustomField>