force-app/main/default/objects/Contact/fields/Company_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Company_Affiliation__c</fullName>
    <description>For DLI Instructor Lead process (SDS-2586)</description>
    <label>Company Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI Lab</fullName>
            </value>
            <value>
                <fullName>APY</fullName>
            </value>
            <value>
                <fullName>ATOS</fullName>
            </value>
            <value>
                <fullName>BIT ( Beijing Institute of Technology )</fullName>
            </value>
            <value>
                <fullName>Booze Allen ( BAH )</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>CTC Technology</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Hancom</fullName>
            </value>
            <value>
                <fullName>Hitachi Information Academy</fullName>
            </value>
            <value>
                <fullName>III Education</fullName>
            </value>
            <value>
                <fullName>Inspur</fullName>
            </value>
            <value>
                <fullName>iTrain</fullName>
            </value>
            <value>
                <fullName>ITRI</fullName>
            </value>
            <value>
                <fullName>Japan Third Party, Co. (JTP)</fullName>
            </value>
            <value>
                <fullName>Leaders Systems</fullName>
            </value>
            <value>
                <fullName>Leadtek Shanghai</fullName>
            </value>
            <value>
                <fullName>Leadtek Taiwan</fullName>
            </value>
            <value>
                <fullName>Mark III Systems</fullName>
            </value>
            <value>
                <fullName>ML Reply</fullName>
            </value>
            <value>
                <fullName>Monterrey CIAA</fullName>
            </value>
            <value>
                <fullName>OpenZeka</fullName>
            </value>
            <value>
                <fullName>Opteamizer</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Rabbit &amp; Tortoise</fullName>
            </value>
            <value>
                <fullName>SCAN</fullName>
            </value>
            <value>
                <fullName>Skyline</fullName>
            </value>
            <value>
                <fullName>Sugon</fullName>
            </value>
            <value>
                <fullName>Suzhou No. 9 Education Technology Co., Ltd</fullName>
            </value>
            <value>
                <fullName>SVA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>