force-app/main/default/objects/Contact/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <description>Marketo Field for reporting</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>