force-app/main/default/objects/Contact/fields/Contact_Digital_Channel__c.field-meta.xml
<CustomField>
    <fullName>Contact_Digital_Channel__c</fullName>
    <businessOwnerUser>dersun@nvidia.com.trprod</businessOwnerUser>
    <description>Jira #SDS-2898; MQL digital channel source (derived from NCID)  </description>
    <label>Contact Digital Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>