force-app/main/default/objects/Contact/fields/Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info__c</fullName>
    <formula>Account.Name &amp; &quot; - &quot; &amp; Email &amp; &quot; - &quot; &amp;  SAP_Contact_ID__c</formula>
    <label>Contact Info</label>
    <type>Text</type>
</CustomField>