force-app/main/default/objects/Contact/fields/Contact_Info_for_Entitlement_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info_for_Entitlement_Transfer__c</fullName>
    <formula>FirstName &amp; &quot; &quot; &amp; LastName &amp; &quot;&lt;&quot; &amp; Email  &amp; &quot;&gt;&quot;</formula>
    <label>Contact Info for Entitlement Transfer</label>
    <type>Text</type>
</CustomField>