force-app/main/default/objects/Contact/fields/Contact_NCID__c.field-meta.xml
<CustomField>
    <fullName>Contact_NCID__c</fullName>
    <businessOwnerUser>dersun@nvidia.com.trprod</businessOwnerUser>
    <description>Jira #SDS-2898; Primary Campaign Source + Sub Source for contact on opportunity</description>
    <label>Contact NCID  </label>
    <length>100</length>
    <type>Text</type>
</CustomField>