force-app/main/default/objects/Contact/fields/Contact_Program_Source__c.field-meta.xml
<CustomField>
    <fullName>Contact_Program_Source__c</fullName>
    <businessOwnerUser>dersun@nvidia.com.trprod</businessOwnerUser>
    <description> Jira #SDS-2898; First touch program/campaign name for contact on opportunity</description>
    <label>Contact Program Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>