force-app/main/default/objects/Contact/fields/Contact_receives_and_manages_leads__c.field-meta.xml
<CustomField>
    <fullName>Contact_receives_and_manages_leads__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box if the Partner Contact will be the primary lead owner for this Partner</inlineHelpText>
    <label>Manages Leads</label>
    <type>Checkbox</type>
</CustomField>