force-app/main/default/objects/Contact/fields/Contact_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Source_Type__c</fullName>
    <businessOwnerUser>dersun@nvidia.com.trprod</businessOwnerUser>
    <label>Contact Source Type </label>
    <length>100</length>
    <type>Text</type>
</CustomField>