force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Valid Contact (Please remove)</fullName>
            </value>
            <value>
                <fullName>Email Updated</fullName>
            </value>
            <value>
                <fullName>Contact Only (No Portal Access)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Inactive Portal User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>