force-app/main/default/objects/Contact/fields/Create_Full_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Create_Full_Portal_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Full Portal User ?</label>
    <type>Checkbox</type>
</CustomField>