force-app/main/default/objects/Contact/fields/Create_User__c.field-meta.xml
<CustomField>
    <fullName>Create_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Lite Portal User ?</label>
    <type>Checkbox</type>
</CustomField>