force-app/main/default/objects/Contact/fields/DEV_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>DEV_Last_Activity_Date__c</fullName>
    <description>Developer Marketing field</description>
    <inlineHelpText>Developer Marketing field</inlineHelpText>
    <label>Last Activity Date</label>
    <type>DateTime</type>
</CustomField>