force-app/main/default/objects/Contact/fields/Difference_in_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Difference_in_Seconds__c</fullName>
    <formula>TEXT(( TODAY() - DATE(1970,01,01))*24*3600)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference in Seconds</label>
    <type>Text</type>
</CustomField>