force-app/main/default/objects/Contact/fields/Disqualified_Recycling_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Recycling_Reason__c</fullName>
    <label>Disqualified/Recycling Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Geography</fullName>
            </value>
            <value>
                <fullName>Dead Lead</fullName>
            </value>
            <value>
                <fullName>Technology Requirement</fullName>
            </value>
            <value>
                <fullName>SPAM/Junk</fullName>
            </value>
            <value>
                <fullName>Invalid Data</fullName>
            </value>
            <value>
                <fullName>Left Company</fullName>
            </value>
            <value>
                <fullName>Tech Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Research Phase</fullName>
            </value>
            <value>
                <fullName>No budget at this time</fullName>
            </value>
            <value>
                <fullName>No need at this time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>