force-app/main/default/objects/Contact/fields/DLI_LMS_Training__c.field-meta.xml
<CustomField>
    <fullName>DLI_LMS_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For DLI Instructor Lead process (SDS-2586)</description>
    <label>DLI LMS Training</label>
    <type>Checkbox</type>
</CustomField>