force-app/main/default/objects/Contact/fields/DLI_LMS_Training_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>DLI_LMS_Training_Completion_Date__c</fullName>
    <description>For DLI Instructor Lead process (SDS-2586)</description>
    <label>DLI LMS Training Completion Date</label>
    <type>Date</type>
</CustomField>