force-app/main/default/objects/Contact/fields/DLI_Remote_Platform_Training__c.field-meta.xml
<CustomField>
    <fullName>DLI_Remote_Platform_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For DLI Instructor Lead process (SDS-2586)</description>
    <label>DLI Remote Platform Training</label>
    <type>Checkbox</type>
</CustomField>