force-app/main/default/objects/Contact/fields/DU_LSID__c.field-meta.xml
<CustomField>
    <fullName>DU_LSID__c</fullName>
    <label>DU LSID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>