force-app/main/default/objects/Contact/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <businessOwnerUser>talicaya@nvidia.com.trprod</businessOwnerUser>
    <description>For use by admins/customer data admins, only - secondary email field for alternate address</description>
    <inlineHelpText>For use by admins/customer data admins, only - secondary email field for alternate address</inlineHelpText>
    <label>Email2</label>
    <type>Email</type>
</CustomField>