force-app/main/default/objects/Contact/fields/Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Status__c</fullName>
    <businessOwnerUser>talicaya@nvidia.com.trprod</businessOwnerUser>
    <description>SDS-2780-Brite Verify-Automated Jobs to Check Invalid Contacts</description>
    <inlineHelpText>BriteVerify Email Verification Status. The Valid status indicates the email is valid, and the Invalid status means an email that is invalid.  Unknown and Accept All mean the email cannot be classified as valid or invalid.</inlineHelpText>
    <label>Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Accept All</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>