force-app/main/default/objects/Contact/fields/Email_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Sub_Status__c</fullName>
    <businessOwnerUser>talicaya@nvidia.com.trprod</businessOwnerUser>
    <description>SDS-2780-Brite Verify-Automated Jobs to Check Invalid Contacts</description>
    <inlineHelpText>BriteVerify Email Verification Sub-Status</inlineHelpText>
    <label>Email Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>email_address_invalid</fullName>
            </value>
            <value>
                <fullName>email_domain_invalid</fullName>
            </value>
            <value>
                <fullName>email_account_invalid</fullName>
            </value>
            <value>
                <fullName>disposable</fullName>
            </value>
            <value>
                <fullName>role_address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>