force-app/main/default/objects/Contact/fields/Emailable__c.field-meta.xml
<CustomField>
    <fullName>Emailable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketo Field for reporting</description>
    <label>Emailable</label>
    <type>Checkbox</type>
</CustomField>