force-app/main/default/objects/Contact/fields/EmailConnect_Status__c.field-meta.xml
<CustomField>
    <fullName>EmailConnect_Status__c</fullName>
    <description>Value set from DemadTools &gt; EmailConnect</description>
    <label>EmailConnect Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Accept_All</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>