force-app/main/default/objects/Contact/fields/EMS_Status__c.field-meta.xml
<CustomField>
    <fullName>EMS_Status__c</fullName>
    <label>EMS Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ToProcess</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>