force-app/main/default/objects/Contact/fields/EMS_Update_Required__c.field-meta.xml
<CustomField>
    <fullName>EMS_Update_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EMS Update Required</label>
    <type>Checkbox</type>
</CustomField>