force-app/main/default/objects/Contact/fields/Ent_Opt_In_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Ent_Opt_In_Opt_In_Date__c</fullName>
    <label>Ent Opt-In - Opt-In Date</label>
    <type>Date</type>
</CustomField>