force-app/main/default/objects/Contact/fields/Ent_Opt_In_Opt_In_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Ent_Opt_In_Opt_In_IP_Address__c</fullName>
    <label>Ent Opt-In - Opt-In IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>