force-app/main/default/objects/Contact/fields/Ent_Topic_AI_and_DL__c.field-meta.xml
<CustomField>
    <fullName>Ent_Topic_AI_and_DL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ent Topic - AI and DL</label>
    <type>Checkbox</type>
</CustomField>