force-app/main/default/objects/Contact/fields/Ent_Topic_AI_and_DL_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Ent_Topic_AI_and_DL_Opt_In_Date__c</fullName>
    <label>Ent Topic - AI and DL Opt-In Date</label>
    <type>Date</type>
</CustomField>