force-app/main/default/objects/Contact/fields/Ent_Topic_Data_Center__c.field-meta.xml
<CustomField>
    <fullName>Ent_Topic_Data_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ent Topic - Data Center</label>
    <type>Checkbox</type>
</CustomField>