force-app/main/default/objects/Contact/fields/Ent_Topic_Design_Pro_Viz__c.field-meta.xml
<CustomField>
    <fullName>Ent_Topic_Design_Pro_Viz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ent Topic - Design Pro Viz</label>
    <type>Checkbox</type>
</CustomField>