force-app/main/default/objects/Contact/fields/Ent_Topic_Design_Pro_Viz_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Ent_Topic_Design_Pro_Viz_Opt_In_Date__c</fullName>
    <label>Ent Topic - Design Pro Viz Opt-In Date</label>
    <type>Date</type>
</CustomField>