force-app/main/default/objects/Contact/fields/Ent_Topic_Design_Pro_Viz_Source__c.field-meta.xml
<CustomField>
    <fullName>Ent_Topic_Design_Pro_Viz_Source__c</fullName>
    <label>Ent Topic - Design Pro Viz Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>