force-app/main/default/objects/Contact/fields/Ent_Topic_Machines_Source__c.field-meta.xml
<CustomField>
    <fullName>Ent_Topic_Machines_Source__c</fullName>
    <label>Ent Topic - Machines Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>