force-app/main/default/objects/Contact/fields/Ent_Topic_NGC__c.field-meta.xml
<CustomField>
    <fullName>Ent_Topic_NGC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ent Topic - NGC</label>
    <type>Checkbox</type>
</CustomField>